--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
             <section class="video-list">
                 <p>videos i made:</p>
                 <div class="video-container">
-                    <iframe width="320" height="180" class="embedded-video"
-                        src="https://www.youtube.com/embed/mP6tPaHUyUk?si=rC9Zu8gb3WhGo48G" title="YouTube video player"
-                        frameborder="0"
+                    <iframe class="embedded-video" src="https://www.youtube.com/embed/mP6tPaHUyUk?si=rC9Zu8gb3WhGo48G"
+                        title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <iframe width="320" height="180" class="embedded-video"
-                        src="https://www.youtube.com/embed/ma6_MFRRdC8?si=2XHoxdMJe0lLpDM2" title="YouTube video player"
-                        frameborder="0"
+                    <iframe class="embedded-video" src="https://www.youtube.com/embed/ma6_MFRRdC8?si=2XHoxdMJe0lLpDM2"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="embedded-video" src="https://www.youtube.com/embed/AbrMQqc2B-4?si=X4D2ouPhpv7ZrtFz"
+                        title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
@@ -69,11 +71,12 @@
                     </ul>
                 </div>
             </section>
+            <!-- footer div -->
+            <footer class="footer-container">
+                <span class="made-with">made with 💖&⚡by <a href="https://x.com/erdhyernando">erdhy</a></span>
+            </footer>
         </main>
-        <!-- footer div -->
-        <footer class="footer-container">
-            <p>made with ❤️ & ⚡ by <a href="https://x.com/erdhyernando">erdhy</a></p>
-        </footer>
+
     </div>
 </body>
 
