feat: add download cv and projects

--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
     <div class="outer-div">
         <main class="main-div">
             <!-- slot machine header -->
-            <h1 class="slot-machine">
-                <span class="text-1">Erdhy Ernando Davis</span>
-                <span class="text-2">dhy.</span>
-            </h1>
+            <div class="header-container">
+                <h1 class="slot-machine">
+                    <span class="text-1">Erdhy Ernando Davis</span>
+                    <span class="text-2">dhy.</span>
+                </h1>
+
+                <div class="cv-download" title="Download CV">
+                    <a href="/assets/Latex_CV.pdf" download class="download-button">
+                        <span class="button-text">Download CV</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                            <polyline points="7 10 12 15 17 10" />
+                            <line x1="12" y1="15" x2="12" y2="3" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
 
             <!-- description div -->
             <div class="description">
@@ -60,13 +74,14 @@
                 <div class="project-container">
                     <ul class="list-of-projects">
                         <li>
-                            <a href="https://www.instagram.com/namlapanstudios/">Namlapan Studios</a>
+                            <a href="https://github.com/ErdhyErnando/flask-auth">Orthosis Web App</a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/neraaventour/">Neraaventour</a>
+                            <a href="https://neraaventour.com/">Nera Aventour</a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/erdhyernando/">Erdhy Ernando</a>
+                            <a href="https://youtu.be/AbrMQqc2B-4?si=XE2PIFu-QEO0iW5N">Cryptocurrency Price Tracker
+                                Using ESP32</a>
                         </li>
                     </ul>
                 </div>
