--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
         rel="stylesheet" />
     <title>Portfolio Website | Codecademy</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 </h1>
 
                 <div class="cv-download" title="Download CV">
-                    <a href="/assets/Latex_CV.pdf" download class="download-button">
+                    <a href="assets/Latex_CV.pdf" download class="download-button">
                         <span class="button-text">Download CV</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
