--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         rel="stylesheet" />
     <title>Portfolio Website | Codecademy</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="public/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="192x192" href="public/android-chrome-192x192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="public/android-chrome-512x512.png">
+    <link rel="manifest" href="public/site.webmanifest">
 </head>
 
 <body>
