feat: add (temporary) pop-up gallery

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     I'm an electrical engineering student with a passion for creating.
                     From
                     <a href="https://www.instagram.com/namlapanstudios/">video production</a>
-                    to web development. I also love photography, making videos, and
+                    to web development. I also love <a href="popup.html">photography</a>, making videos, and
                     <a href="https://www.instagram.com/neraaventour/">exploring new places</a>. Right now, I'm diving
                     deep into coding to expand my skills as a
                     future developer.
