feat: add modal for different types of CV

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
         rel="stylesheet" />
-    <title>Portfolio Website | Codecademy</title>
+    <title>Erdhy Ernando's Portfolio Website</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/modal.css" />
     <link rel="icon" href="public/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="192x192" href="public/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="512x512" href="public/android-chrome-512x512.png">
@@ -29,7 +30,7 @@
 
                 <div class="header-buttons">
                     <div class="cv-download" title="Download CV">
-                        <a href="assets/Latex_CV.pdf" download class="download-button">
+                        <button class="download-button" onclick="openModal()">
                             <span class="button-text">Download CV</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -37,7 +38,7 @@
                                 <polyline points="7 10 12 15 17 10" />
                                 <line x1="12" y1="15" x2="12" y2="3" />
                             </svg>
-                        </a>
+                        </button>
                     </div>
                     <a href="https://github.com/ErdhyErnando" target="_blank" class="social-button github" title="GitHub Profile">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round">
@@ -106,11 +107,56 @@
             </section>
             <!-- footer div -->
             <footer class="footer-container">
-                <span class="made-with">made with 💖 & ⚡ by <a href="https://x.com/erdhyernando">erdhy</a></span>
+                <span class="made-with">made with &#x1F496; &#x26A1; by <a href="https://x.com/erdhyernando">erdhy</a></span>
             </footer>
         </main>
 
     </div>
+
+    <!-- CV Selection Modal -->
+    <div id="cvModal" class="modal">
+        <div class="modal-content">
+            <h2>Select CV Type</h2>
+            <div class="cv-options">
+                <a href="assets/Engineering_CV.pdf" download class="cv-option">
+                    <span>Engineering CV</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg>
+                </a>
+                <a href="assets/Creative_CV.pdf" download class="cv-option">
+                    <span>Creative CV</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg>
+                </a>
+            </div>
+            <button class="close-modal" onclick="closeModal()">×</button>
+        </div>
+    </div>
+
+    <script>
+        function openModal() {
+            document.getElementById('cvModal').style.display = 'flex';
+        }
+
+        function closeModal() {
+            document.getElementById('cvModal').style.display = 'none';
+        }
+
+        window.onclick = function(event) {
+            const modal = document.getElementById('cvModal');
+            if (event.target === modal) {
+                closeModal();
+            }
+        }
+    </script>
 </body>
 
 </html>
