--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
         rel="stylesheet" />
-    <title>photo gallery website</title>
+    <title>dhy-photo's Gallery</title>
 
     <link rel="icon" href="public/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="192x192" href="public/android-chrome-192x192.png">
